- Move tests from "jdk.jpackage.tests" package to the default package. - Remove WindowsHelper.getTempDirectory() as it is not needed any more.